# docs/swagger.json
@@ -222,7 +222,7 @@
         },
         "/upd/{id}": {
             "put": {
-                "description": "Ubah data presensi.",
+                "description": "Ubah data monitoring.",
                 "consumes": [
                     "application/json"
                 ],
@@ -230,9 +230,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Presensi"
+                    "Monitoring"
                 ],
-                "summary": "Update data presensi.",
+                "summary": "Update data monitoring.",
                 "parameters": [
                     {
                         "type": "string",
@@ -247,7 +247,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controller.Presensi"
+                            "$ref": "#/definitions/controller.Monitoring"
                         }
                     }
                 ],
@@ -255,7 +255,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.Presensi"
+                            "$ref": "#/definitions/controller.Monitoring"
                         }
                     },
                     "400": {
